# ETHGlobal-Bangkok-2024

./: .env.example  .gitignore  README.md
cowapi/: README.md  next.config.ts  package.json
cowapi/rust_verifier/: Cargo.toml  package.json
cowapi/rust_verifier/src/: lib.rs
cowapi/src/components/: LimitOrdersTable.tsx  ProofsModal.tsx  StakeButton.tsx  StatsTable.tsx  TradesTable.tsx
cowapi/src/contracts/: FundManager.sol  FundManager.ts  TokenConract.ts
cowapi/src/cowUtils/: getOrder.ts  getTradeStatus.ts  setLimitOrder.ts  web3Utils.ts
cowapi/src/hooks/: getOrderData.ts
cowapi/src/pages/: _app.tsx  index.tsx
cowapi/src/pages/api/: createCoWOrder.ts  createLimitOrder.ts  getTradeStatus.ts  prox.ts  verify.ts
fund-manager-graph/: README.md  networks.json  package.json  schema.graphql  subgraph.yaml
fund-manager-graph/abis/: FundManager.json
fund-manager-graph/src/: fund-manager.ts  helpers.ts
fund-manager-graph/tests/: fund-manager-utils.ts  fund-manager.test.ts
tlsn-langchain/: Cargo.toml  README.md  pyproject.toml
tlsn-langchain/example/: example.py
tlsn-langchain/src/: config.rs  lib.rs  model_interactions.rs  setup_notary.rs
verifiable_langchain_agent/: pyproject.toml
verifiable_langchain_agent/src/verifiable_langchain_agent/: __init__.py  redpill_langchain.py  verifiable_redpill_langchain.py
verifiable_langchain_agent/tests/: test_verifiable_redpill_langchain_agent.py
verifiable_trading_agent/: README.md  pyproject.toml
verifiable_trading_agent/src/verifiable_trading_agent/: chatbot.py  cow_trade_limit_order.py  get_polymarket_markets.py
