[tool.poetry]
name = "tlsn-langchain"
version = "0.1.0"
description = "Maturin Starter Project w/PyO3 & Poetry"
authors = [ "Hello" ]

[tool.maturin]
profile = "release"


[tool.poetry.dependencies]
python = ">=3.8"
maturin-import-hook = "^0.1.0"

[tool.poetry.dev-dependencies]
maturin = "^0.13.2"
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tlsn-langchain"
version = "0.1.0"
description = "Maturin Starter Project w/Poetry"
authors = [ { name = "Hello", email= "Hello" } ]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]